--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,13 +15,13 @@
 
 {% seo %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#B5EEE7">
+    <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
   <body>
     <header class="page-header" role="banner">
-      <img src="https://raw.githubusercontent.com/ccims/overview-and-documentation/5d05f85ec278da3a643510fca58b18fab75106af/app_logos/logo_final_12.5p.svg" alt="{{ page.title | default: site.title | default: site.github.repository_name }}" class="project-name" />
+      <img src="https://raw.githubusercontent.com/ccims/overview-and-documentation/5d05f85ec278da3a643510fca58b18fab75106af/app_logos/logo_final_12.5p_white.svg" alt="{{ page.title | default: site.title | default: site.github.repository_name }}" class="project-name" />
       <br/>
       <br/>
       <br/>
